--- a/perchance.html
+++ b/perchance.html
@@ -1,7 +1,14 @@
 <h1>[title]</h1>
-<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>The antagonist:</b> [antagonist_1], whos [antagonist_1_1]</p>
-<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>The scheme:</b> [scheme_5]</p>
-<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>The motivation:</b> [motivation_6]</p>
+<h2>The Antagonist</h2>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>The antagonist:</b> [antagonist_1], who is [antagonist_1_1]</p>
+<h2>The scheme</h2>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;">[scheme_5] because [scheme_motivation_5_1]</p>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;">The scheme requires [scheme_requirements_6] from [scheme_requirements_6_1]</p>
+<h2>Scenario Hooks</h2>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;">[scenario_hooks_7] [scenario_draws_7_1]</p>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Character mission:</b>[mission_character_8] [mission_objective_8_1]</p>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Military mission:</b>[mission_military_8] [mission_objective_8_1]</p>
+<p style="margin:1em auto; padding:0 1em; max-width:700px;"></p>
 
 <button onclick="update()">randomize</button>
 <br>
