Input Tabelle vervollständigt

--- a/perchance.html
+++ b/perchance.html
@@ -9,7 +9,38 @@
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Character mission:</b>[mission_character_8] [mission_objective_8_1]</p>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Military mission:</b>[mission_military_8] [mission_objective_8_1]</p>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"></p>
+<h2>Scenario Hooks</h2>
 
 <button onclick="update()">randomize</button>
 <br>
 <!-- Learn HTML here:   https://www.khanacademy.org/computing/computer-programming/html-css    -->
+<!-- 
+    ELEMENT ONE: THE ANTAGONIST
+    ELEMENT TWO: THE SCHEME
+    ELEMENT THREE: SCENARIO HOOKS
+    ELEMENT FOUR: TRIALS AND TRIBULATIONS
+    ELEMENT FIVE: LOCATIONS
+
+ MISSION ARCHITECT SUMMARY
+    ANTAGONIST & SCHEME
+        Roll for an Antagonist and their Descriptor (utilizing Tables 1, 2, 3, and 4 as
+        necessary).
+        Roll for the Antagonist’s Plot Concept and Motivation (Table 5). Roll on any addi-
+        tional tables as directed (Table 11 or 12).
+        Roll for the Antagonist’s Requirements for Success and a From/Where location
+        (Table 6). Roll on any additional tables as directed (Tables 3, 9–12, and 18–26).
+    PLAYER CHARACTERS
+        Roll for a Plot Hook and Draw (Table 7). Roll on any additional tables as directed
+        (Table 1, 2, 9, or 10).
+        Roll for a Mission/Military Mission (depending on your campaign) and a
+        Mission Objective (Table 8). Roll on any additional tables as directed (Tables 1, 5,
+        9–11, or 14).
+    OBSTACLES
+        Roll for one or more plot Obstacles and Plot Twists (Table 13). Roll on any addi-
+        tional tables as directed (Table 1, 2, 3, or 7).
+    LOCATIONS
+        Roll any number of Mission Locations (roll a single d20 on the From/Where
+        column of Table 6).
+        Roll for a Location Choice and Location Atmosphere (Table 14). Roll on any addi-
+        tional tables as directed (Tables 15–26).
+-->
