--- a/perchance.html
+++ b/perchance.html
@@ -1,10 +1,10 @@
 <h1>Infinity: Mission Generator</h1>
-<h2>Elemetn One: The Antagonist</h2>
+<h2>Element One: The Antagonist</h2>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>The antagonist:</b> [antagonist_1_1], who is [antagonist_1_2]</p>
 <h2>Element Two: The scheme</h2>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;">[scheme_5_1] because [scheme_motivation_5_2]</p>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;">The scheme requires [scheme_requirements_6_1] from [scheme_requirements_6_2]</p>
-<h2>Elemtn Three: Scenario Hooks</h2>
+<h2>Element Three: Scenario Hooks</h2>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;">[scenario_hooks_7_1] [scenario_draws_7_2]</p>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Character mission: </b>[mission_character_8_1] [mission_objective_8_3]</p>
 <p style="margin:1em auto; padding:0 1em; max-width:700px;"><b>Military mission: </b>[mission_military_8_2] [mission_objective_8_3]</p>
